@@ -1,5 +1,7 @@
 <next version> <kevin@koconnor.net>
 
+  * New variable: FBDURINGBOOT
+
   * DUMP no longer takes a filename parameter.  Use the REDIR command
     instead.  (For example, "DUMP GPIO out.txt" is now "REDIR out.txt
     DUMP GPIO".)
